<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".SingIn">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTelefono"
            android:inputType="phone"
            android:maxLength="10"
            android:text="@string/celularDisney"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintContrasenia"
            android:inputType="textPassword"
            android:maxLength="10"
            android:text="@string/contraseniaDisney"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSingIn"
        android:text="@string/ingresar"
        android:background="@color/btnSingActive"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        />


</RelativeLayout>