<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="191dp"
            android:src="@drawable/b2mlogo"
            android:contentDescription="...." />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/aplicaci_n_para_staff"
            android:textAlignment="center"
            android:textColor="@android:color/white" />
    </LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnSingUp"
            android:text="@string/registrarse"
            android:background="@color/btnSingUp"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnSingIn"
            android:text="@string/ingresar"
            android:background="@color/btnSingActive"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            />
    </LinearLayout>
</RelativeLayout>