<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="nombre"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="34sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripci_n"
            android:inputType="textMultiLine"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="34sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descuento"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            android:weightSum="2">

            <info.hoang8f.widget.FButton
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnSelect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="Seleccionar Imágen"
                android:textColor="@android:color/white"
                app:fButtonColor="@color/btnSingActive"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp"
                app:cornerRadius="4dp"/>

            <info.hoang8f.widget.FButton
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnUpload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="Subir imágen"
                android:textColor="@android:color/white"
                app:fButtonColor="@color/colorPrimaryDark"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp"
                app:cornerRadius="4dp"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>